[gd_scene load_steps=5 format=3 uid="uid://dp65htjh51hx8"]

[ext_resource type="Script" path="res://Scripts/Introduction_Manager.gd" id="1_pspxt"]
[ext_resource type="AudioStream" uid="uid://cajemqllyvfjp" path="res://Sound/Introduction_VA.wav" id="2_jvs50"]

[sub_resource type="LabelSettings" id="LabelSettings_rtw0y"]
font_size = 50
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_nymkr"]
font_size = 50
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[node name="Introduction" type="Node3D"]
script = ExtResource("1_pspxt")

[node name="Introdution_VA" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_jvs50")
volume_db = 3.0

[node name="Start_Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="Blackout_Curtain" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Sentence_1_Text" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -197.0
offset_top = -130.0
offset_right = 192.0
offset_bottom = -68.0
grow_horizontal = 2
grow_vertical = 2
text = "Ah, the sheep go out!
"
label_settings = SubResource("LabelSettings_rtw0y")
horizontal_alignment = 1

[node name="Sentence_1_Timer" type="Timer" parent="Sentence_1_Text"]
wait_time = 0.7
one_shot = true

[node name="Sentence_2_Text" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -249.0
offset_top = -44.0
offset_right = 244.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
text = "Throw 'em back in, would ya?
"
label_settings = SubResource("LabelSettings_nymkr")
horizontal_alignment = 1

[node name="Sentence_2_Timer" type="Timer" parent="Sentence_2_Text"]
wait_time = 2.8
one_shot = true

[connection signal="finished" from="Introdution_VA" to="." method="_on_introdution_va_finished"]
[connection signal="timeout" from="Start_Timer" to="." method="_on_start_timer_timeout"]
[connection signal="timeout" from="Sentence_1_Text/Sentence_1_Timer" to="." method="_on_sentence_1_timer_timeout"]
[connection signal="timeout" from="Sentence_2_Text/Sentence_2_Timer" to="." method="_on_sentence_2_timer_timeout"]
